--- a/org/getting-started-with-org-mode.html
+++ b/org/getting-started-with-org-mode.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-09-28 Fri 13:59 -->
+<!-- 2018-09-28 Fri 19:26 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Getting Started with Org-Mode</title>
@@ -251,8 +251,8 @@ for the JavaScript code in this tag.
 <body>
 <div id="content">
 <h1 class="title">Getting Started with Org-Mode</h1>
-<div id="outline-container-org161df91" class="outline-2">
-<h2 id="org161df91"><span class="section-number-2">1</span> Tutorial</h2>
+<div id="outline-container-org025e0ee" class="outline-2">
+<h2 id="org025e0ee"><span class="section-number-2">1</span> Tutorial</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>Sub heading (M-&lt;enter&gt;) to create more items of the same type</li>
@@ -261,8 +261,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-orgb72c404" class="outline-2">
-<h2 id="orgb72c404"><span class="section-number-2">2</span> <a href="https://orgmode.org/org.html#Markup">Markdown similarities</a></h2>
+<div id="outline-container-orga1b7dcc" class="outline-2">
+<h2 id="orga1b7dcc"><span class="section-number-2">2</span> <a href="https://orgmode.org/org.html#Markup">Markdown similarities</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <b>Bold</b> <i>italic</i> <code>verbatim</code> <del>strikethrough</del>
@@ -276,8 +276,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-orgd7f555a" class="outline-2">
-<h2 id="orgd7f555a"><span class="section-number-2">3</span> <a href="https://orgmode.org/org.html#toc-Hyperlinks-1">Hyperlinks</a></h2>
+<div id="outline-container-org66de10d" class="outline-2">
+<h2 id="org66de10d"><span class="section-number-2">3</span> <a href="https://orgmode.org/org.html#toc-Hyperlinks-1">Hyperlinks</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 (C-c C-l) to insert a link
@@ -288,7 +288,7 @@ for the JavaScript code in this tag.
 </ul>
 
 <p>
-<a href="#orgef2295e">Tables</a>
+<a href="#org1c7a523">Tables</a>
 </p>
 
 <p>
@@ -296,7 +296,7 @@ for the JavaScript code in this tag.
 </p>
 
 <p>
-<a href="#org2fd3139">Export</a>
+<a href="#org737260a">Export</a>
 </p>
 
 <p>
@@ -312,15 +312,15 @@ for the JavaScript code in this tag.
 </p>
 </div>
 
-<div id="outline-container-org0fa96c5" class="outline-3">
-<h3 id="org0fa96c5"><span class="section-number-3">3.1</span> <span class="done DONE">DONE</span> : Link to files emails or todo items</h3>
+<div id="outline-container-orgeccbcc4" class="outline-3">
+<h3 id="orgeccbcc4"><span class="section-number-3">3.1</span> <span class="done DONE">DONE</span> : Link to files emails or todo items</h3>
 <div class="outline-text-3" id="text-3-1">
 </div>
 </div>
 </div>
 
-<div id="outline-container-orgef2295e" class="outline-2">
-<h2 id="orgef2295e"><span class="section-number-2">4</span> <a href="https://orgmode.org/org.html#Tables">Tables</a></h2>
+<div id="outline-container-org1c7a523" class="outline-2">
+<h2 id="org1c7a523"><span class="section-number-2">4</span> <a href="https://orgmode.org/org.html#Tables">Tables</a></h2>
 <div class="outline-text-2" id="text-4">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -393,12 +393,12 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-orgc765b93" class="outline-2">
-<h2 id="orgc765b93"><span class="section-number-2">5</span> <span class="todo TODO">TODO</span> More on how tables are actually spreadsheets</h2>
+<div id="outline-container-org7707a09" class="outline-2">
+<h2 id="org7707a09"><span class="section-number-2">5</span> <span class="todo TODO">TODO</span> More on how tables are actually spreadsheets</h2>
 </div>
 
-<div id="outline-container-org2fd3139" class="outline-2">
-<h2 id="org2fd3139"><span class="section-number-2">6</span> Export</h2>
+<div id="outline-container-org737260a" class="outline-2">
+<h2 id="org737260a"><span class="section-number-2">6</span> Export</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 output html
@@ -409,15 +409,15 @@ output html
 </p>
 </div>
 
-<div id="outline-container-org71ef255" class="outline-3">
-<h3 id="org71ef255"><span class="section-number-3">6.1</span> <a href="https://orgmode.org/org.html#Property-syntax">Properties</a></h3>
+<div id="outline-container-org04f741c" class="outline-3">
+<h3 id="org04f741c"><span class="section-number-3">6.1</span> <a href="https://orgmode.org/org.html#Property-syntax">Properties</a></h3>
 <div class="outline-text-3" id="text-6-1">
 </div>
 </div>
 </div>
 
-<div id="outline-container-org2081a1b" class="outline-2">
-<h2 id="org2081a1b"><span class="section-number-2">7</span> Source Code</h2>
+<div id="outline-container-org0755717" class="outline-2">
+<h2 id="org0755717"><span class="section-number-2">7</span> Source Code</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 (&lt;-s-&lt;tab&gt;) shortcut to create BEGIN/END tag
@@ -432,22 +432,30 @@ output html
 </div>
 </div>
 
-<div id="outline-container-orgec269e0" class="outline-2">
-<h2 id="orgec269e0"><span class="section-number-2">8</span> <span class="done DONE">DONE</span> Setup babel execution for python</h2>
+<div id="outline-container-org4fec910" class="outline-2">
+<h2 id="org4fec910"><span class="section-number-2">8</span> <span class="done DONE">DONE</span> Setup babel execution for python</h2>
 <div class="outline-text-2" id="text-8">
 </div>
 </div>
 
-<div id="outline-container-org77f2cd9" class="outline-2">
-<h2 id="org77f2cd9"><span class="section-number-2">9</span> <span class="todo TODO">TODO</span> Package "minted" for syntax highlighted export</h2>
+<div id="outline-container-org1254ba5" class="outline-2">
+<h2 id="org1254ba5"><span class="section-number-2">9</span> <span class="done DONE">DONE</span> Package "minted" for syntax highlighted export</h2>
+<div class="outline-text-2" id="text-9">
+</div>
 </div>
 
-<div id="outline-container-org91fc11c" class="outline-2">
-<h2 id="org91fc11c"><span class="section-number-2">10</span> LaTeX integration</h2>
+<div id="outline-container-org02e145d" class="outline-2">
+<h2 id="org02e145d"><span class="section-number-2">10</span> LaTeX integration</h2>
 <div class="outline-text-2" id="text-10">
 <ul class="org-ul">
 <li>Characters: &alpha; &rarr;</li>
+<li>\(O(n \logn)\)</li>
 </ul>
+
+\begin{align*}
+  3 * 2 + &= 6 + 1 \\
+          &= 7
+\end{align*}
 
 \begin{minted}[mathescape,
                linenos,
@@ -467,7 +475,7 @@ const double pi = 3.1415926535
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2018-09-28 Fri 13:59</p>
+<p class="date">Created: 2018-09-28 Fri 19:26</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
